# AirWrite

./: .editorconfig  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  cleanup.rs  ducking.rs  history.rs  lib.rs  llm_cleanup.rs  main.rs  paste.rs  recorder.rs  settings.rs  transcribe_groq.rs
src/components/: Overlay.tsx  SettingsPanel.tsx
src/components/settings/: AboutSection.tsx  ApiKeySection.tsx  AudioSection.tsx  ErrorBanner.tsx  HistorySection.tsx  HotkeySection.tsx  RecordingSection.tsx  Sidebar.tsx  primitives.tsx  types.ts
