[package]
name = "airwrite"
version = "0.1.0"
edition = "2021"

[lib]
name = "airwrite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
enigo = "0.2"
reqwest = { version = "0.12", features = ["multipart", "json"] }
hound = "3.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
dirs = "6"
arboard = "3"
parking_lot = "0.12"
keyring = { version = "3", features = ["windows-native"] }
tempfile = "3"
log = "0.4"
env_logger = "0.11"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Security_Cryptography",
    "Win32_System_Com",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
